infrastructure/kubernetes/ingress/production/ingress-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: beta.future.nhs.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
  tls:
    - hosts:
        - beta.future.nhs.uk
      secretName: beta.future.nhs.uk
