infrastructure/kubernetes/ingress/production/ingress-kratos.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: kratos
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: beta.future.nhs.uk
      http:
        paths:
          - path: /.ory/kratos/public(/|$)(.*)
            backend:
              serviceName: kratos-public
              servicePort: 80
  tls:
    - hosts:
        - beta.future.nhs.uk
      secretName: beta.future.nhs.uk
